snapshots/DeepSpeech/native_client/kenlm/lm/return.hh.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 42
kind: unit
spaces:
  - name: lm
    start_line: 6
    end_line: 41
    kind: namespace
    spaces:
      - name: FullScoreReturn
        start_line: 8
        end_line: 39
        kind: struct
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 8
            total_operators: 13
            unique_operands: 6
            total_operands: 6
            length: 19
            estimated_program_length: 39.51
            purity_ratio: 2.079
            vocabulary: 14
            volume: 72.34
            difficulty: 4
            level: 0.25
            effort: 289.359
            time: 16.075
            bugs: 0.015
          loc:
            sloc: 32
            ploc: 7
            lloc: 0
            cloc: 23
            blank: 3
            sloc_average: 32
            ploc_average: 7
            lloc_average: 0
            cloc_average: 23
            blank_average: 3
            sloc_min: 32
            sloc_max: 32
            cloc_min: 23
            cloc_max: 23
            ploc_min: 7
            ploc_max: 7
            lloc_min: 0
            lloc_max: 0
            blank_min: 3
            blank_max: 3
          nom:
            functions: 0
            closures: 0
            functions_average: 0
            closures_average: 0
            total: 0
            average: 0
            functions_min: 0
            functions_max: 0
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 20
            average: 20
            min: 20
            max: 20
          mi:
            original: 92.362
            sei: 84.53
            visual_studio: 54.013
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
          wmc:
            class_wmc_sum: 0
            interface_wmc_sum: 0
            total: 0
          npm:
            class_npm_sum: 0
            interface_npm_sum: 0
            class_methods: 0
            interface_methods: 0
            class_coa: 0
            interface_coa: 0
            total: 0
            total_methods: 0
            coa: 0
          npa:
            class_npa_sum: 5
            interface_npa_sum: 0
            class_attributes: 5
            interface_attributes: 0
            class_cda: 1
            interface_cda: 0
            total: 5
            total_attributes: 5
            cda: 1
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 2
        value: 1
        average: 2
        min: 1
        max: 1
        modified:
          sum: 2
          value: 1
          average: 2
          min: 1
          max: 1
      halstead:
        unique_operators: 8
        total_operators: 15
        unique_operands: 7
        total_operands: 7
        length: 22
        estimated_program_length: 43.651
        purity_ratio: 1.984
        vocabulary: 15
        volume: 85.952
        difficulty: 4
        level: 0.25
        effort: 343.806
        time: 19.1
        bugs: 0.016
      loc:
        sloc: 36
        ploc: 9
        lloc: 0
        cloc: 24
        blank: 4
        sloc_average: 18
        ploc_average: 4.5
        lloc_average: 0
        cloc_average: 12
        blank_average: 2
        sloc_min: 32
        sloc_max: 36
        cloc_min: 23
        cloc_max: 24
        ploc_min: 7
        ploc_max: 9
        lloc_min: 0
        lloc_max: 0
        blank_min: 3
        blank_max: 4
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 25
        average: 12.5
        min: 5
        max: 20
      mi:
        original: 89.327
        sei: 57.507
        visual_studio: 52.238
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 5
        interface_npa_sum: 0
        class_attributes: 5
        interface_attributes: 0
        class_cda: 1
        interface_cda: 0
        total: 5
        total_attributes: 5
        cda: 1
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 3
    value: 1
    average: 3
    min: 1
    max: 1
    modified:
      sum: 3
      value: 1
      average: 3
      min: 1
      max: 1
  halstead:
    unique_operators: 8
    total_operators: 15
    unique_operands: 8
    total_operands: 9
    length: 24
    estimated_program_length: 48
    purity_ratio: 2
    vocabulary: 16
    volume: 96
    difficulty: 4.5
    level: 0.222
    effort: 432
    time: 24
    bugs: 0.019
  loc:
    sloc: 42
    ploc: 13
    lloc: 0
    cloc: 26
    blank: 6
    sloc_average: 14
    ploc_average: 4.333
    lloc_average: 0
    cloc_average: 8.667
    blank_average: 2
    sloc_min: 32
    sloc_max: 42
    cloc_min: 23
    cloc_max: 26
    ploc_min: 7
    ploc_max: 13
    lloc_min: 0
    lloc_max: 0
    blank_min: 3
    blank_max: 6
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 32
    average: 10.667
    min: 5
    max: 20
  mi:
    original: 86.025
    sei: 30.288
    visual_studio: 50.307
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 5
    interface_npa_sum: 0
    class_attributes: 5
    interface_attributes: 0
    class_cda: 1
    interface_cda: 0
    total: 5
    total_attributes: 5
    cda: 1
