snapshots/DeepSpeech/native_client/kenlm/lm/sizes.cc.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 63
kind: unit
spaces:
  - name: lm
    start_line: 8
    end_line: 63
    kind: namespace
    spaces:
      - name: ngram
        start_line: 9
        end_line: 63
        kind: namespace
        spaces:
          - name: ShowSizes
            start_line: 11
            end_line: 49
            kind: function
            spaces: []
            metrics:
              nargs:
                function_args: 2
                closure_args: 0
                function_args_average: 2
                closure_args_average: 0
                total: 2
                value: 2
                average: 2
                function_args_min: 2
                function_args_max: 2
                closure_args_min: 0
                closure_args_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 5
                value: 5
                average: 5
                min: 5
                max: 5
              cyclomatic:
                sum: 5
                value: 5
                average: 5
                min: 5
                max: 5
                modified:
                  sum: 5
                  value: 5
                  average: 5
                  min: 5
                  max: 5
              halstead:
                unique_operators: 28
                total_operators: 252
                unique_operands: 55
                total_operands: 167
                length: 419
                estimated_program_length: 452.581
                purity_ratio: 1.08
                vocabulary: 83
                volume: 2671.142
                difficulty: 42.509
                level: 0.024
                effort: 113547.798
                time: 6308.211
                bugs: 0.782
              loc:
                sloc: 39
                ploc: 36
                lloc: 27
                cloc: 1
                blank: 2
                sloc_average: 39
                ploc_average: 36
                lloc_average: 27
                cloc_average: 1
                blank_average: 2
                sloc_min: 39
                sloc_max: 39
                cloc_min: 1
                cloc_max: 1
                ploc_min: 36
                ploc_max: 36
                lloc_min: 27
                lloc_max: 27
                blank_min: 2
                blank_max: 2
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              tokens:
                tokens: 564
                average: 564
                min: 564
                max: 564
              mi:
                original: 69.471
                sei: 55.725
                visual_studio: 40.626
              abc:
                assignments: 19
                branches: 18
                conditions: 7
                magnitude: 27.092
                value: 27.092
                assignments_average: 19
                branches_average: 18
                conditions_average: 7
                assignments_min: 19
                assignments_max: 19
                branches_min: 18
                branches_max: 18
                conditions_min: 7
                conditions_max: 7
          - name: ShowSizes
            start_line: 51
            end_line: 54
            kind: function
            spaces: []
            metrics:
              nargs:
                function_args: 1
                closure_args: 0
                function_args_average: 1
                closure_args_average: 0
                total: 1
                value: 1
                average: 1
                function_args_min: 1
                function_args_max: 1
                closure_args_min: 0
                closure_args_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 0
                value: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                value: 1
                average: 1
                min: 1
                max: 1
                modified:
                  sum: 1
                  value: 1
                  average: 1
                  min: 1
                  max: 1
              halstead:
                unique_operators: 10
                total_operators: 14
                unique_operands: 5
                total_operands: 8
                length: 22
                estimated_program_length: 44.829
                purity_ratio: 2.038
                vocabulary: 15
                volume: 85.952
                difficulty: 8
                level: 0.125
                effort: 687.613
                time: 38.201
                bugs: 0.026
              loc:
                sloc: 4
                ploc: 4
                lloc: 2
                cloc: 0
                blank: 0
                sloc_average: 4
                ploc_average: 4
                lloc_average: 2
                cloc_average: 0
                blank_average: 0
                sloc_min: 4
                sloc_max: 4
                cloc_min: 0
                cloc_max: 0
                ploc_min: 4
                ploc_max: 4
                lloc_min: 2
                lloc_max: 2
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              tokens:
                tokens: 29
                average: 29
                min: 29
                max: 29
              mi:
                original: 125.152
                sei: 104.958
                visual_studio: 73.189
              abc:
                assignments: 0
                branches: 1
                conditions: 0
                magnitude: 1
                value: 1
                assignments_average: 0
                branches_average: 1
                conditions_average: 0
                assignments_min: 0
                assignments_max: 0
                branches_min: 1
                branches_max: 1
                conditions_min: 0
                conditions_max: 0
          - name: ShowSizes
            start_line: 56
            end_line: 61
            kind: function
            spaces: []
            metrics:
              nargs:
                function_args: 2
                closure_args: 0
                function_args_average: 2
                closure_args_average: 0
                total: 2
                value: 2
                average: 2
                function_args_min: 2
                function_args_max: 2
                closure_args_min: 0
                closure_args_max: 0
              nexits:
                sum: 0
                average: 0
                min: 0
                max: 0
              cognitive:
                sum: 0
                value: 0
                average: 0
                min: 0
                max: 0
              cyclomatic:
                sum: 1
                value: 1
                average: 1
                min: 1
                max: 1
                modified:
                  sum: 1
                  value: 1
                  average: 1
                  min: 1
                  max: 1
              halstead:
                unique_operators: 12
                total_operators: 24
                unique_operands: 9
                total_operands: 15
                length: 39
                estimated_program_length: 71.549
                purity_ratio: 1.835
                vocabulary: 21
                volume: 171.3
                difficulty: 10
                level: 0.1
                effort: 1713.004
                time: 95.167
                bugs: 0.048
              loc:
                sloc: 6
                ploc: 6
                lloc: 4
                cloc: 0
                blank: 0
                sloc_average: 6
                ploc_average: 6
                lloc_average: 4
                cloc_average: 0
                blank_average: 0
                sloc_min: 6
                sloc_max: 6
                cloc_min: 0
                cloc_max: 0
                ploc_min: 6
                ploc_max: 6
                lloc_min: 4
                lloc_max: 4
                blank_min: 0
                blank_max: 0
              nom:
                functions: 1
                closures: 0
                functions_average: 1
                closures_average: 0
                total: 1
                average: 1
                functions_min: 1
                functions_max: 1
                closures_min: 0
                closures_max: 0
              tokens:
                tokens: 51
                average: 51
                min: 51
                max: 51
              mi:
                original: 114.998
                sei: 90.308
                visual_studio: 67.25
              abc:
                assignments: 0
                branches: 2
                conditions: 0
                magnitude: 2
                value: 2
                assignments_average: 0
                branches_average: 2
                conditions_average: 0
                assignments_min: 0
                assignments_max: 0
                branches_min: 2
                branches_max: 2
                conditions_min: 0
                conditions_max: 0
        metrics:
          nargs:
            function_args: 5
            closure_args: 0
            function_args_average: 1.667
            closure_args_average: 0
            total: 5
            value: 0
            average: 1.667
            function_args_min: 0
            function_args_max: 2
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 5
            value: 0
            average: 1.667
            min: 0
            max: 5
          cyclomatic:
            sum: 8
            value: 1
            average: 2.667
            min: 1
            max: 5
            modified:
              sum: 8
              value: 1
              average: 2.6666666666666665
              min: 1
              max: 5
          halstead:
            unique_operators: 29
            total_operators: 292
            unique_operands: 60
            total_operands: 191
            length: 483
            estimated_program_length: 495.295
            purity_ratio: 1.025
            vocabulary: 89
            volume: 3127.779
            difficulty: 46.158
            level: 0.022
            effort: 144373.077
            time: 8020.727
            bugs: 0.917
          loc:
            sloc: 55
            ploc: 48
            lloc: 33
            cloc: 1
            blank: 6
            sloc_average: 13.75
            ploc_average: 12
            lloc_average: 8.25
            cloc_average: 0.25
            blank_average: 1.5
            sloc_min: 4
            sloc_max: 55
            cloc_min: 0
            cloc_max: 1
            ploc_min: 4
            ploc_max: 48
            lloc_min: 2
            lloc_max: 33
            blank_min: 0
            blank_max: 6
          nom:
            functions: 3
            closures: 0
            functions_average: 0.75
            closures_average: 0
            total: 3
            average: 0.75
            functions_min: 0
            functions_max: 1
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 648
            average: 162
            min: 4
            max: 564
          mi:
            original: 62.391
            sei: 58.562
            visual_studio: 36.486
          abc:
            assignments: 19
            branches: 21
            conditions: 7
            magnitude: 29.172
            value: 0
            assignments_average: 4.75
            branches_average: 5.25
            conditions_average: 1.75
            assignments_min: 0
            assignments_max: 19
            branches_min: 0
            branches_max: 18
            conditions_min: 0
            conditions_max: 7
          npm:
            class_npm_sum: 0
            interface_npm_sum: 0
            class_methods: 0
            interface_methods: 0
            class_coa: 0
            interface_coa: 0
            total: 0
            total_methods: 0
            coa: 0
          npa:
            class_npa_sum: 0
            interface_npa_sum: 0
            class_attributes: 0
            interface_attributes: 0
            class_cda: 0
            interface_cda: 0
            total: 0
            total_attributes: 0
            cda: 0
    metrics:
      nargs:
        function_args: 5
        closure_args: 0
        function_args_average: 1.667
        closure_args_average: 0
        total: 5
        value: 0
        average: 1.667
        function_args_min: 0
        function_args_max: 2
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 5
        value: 0
        average: 1.667
        min: 0
        max: 5
      cyclomatic:
        sum: 9
        value: 1
        average: 3
        min: 1
        max: 5
        modified:
          sum: 9
          value: 1
          average: 3
          min: 1
          max: 5
      halstead:
        unique_operators: 29
        total_operators: 294
        unique_operands: 61
        total_operands: 192
        length: 486
        estimated_program_length: 502.656
        purity_ratio: 1.034
        vocabulary: 90
        volume: 3155.041
        difficulty: 45.639
        level: 0.022
        effort: 143993.984
        time: 7999.666
        bugs: 0.916
      loc:
        sloc: 56
        ploc: 49
        lloc: 33
        cloc: 1
        blank: 6
        sloc_average: 11.2
        ploc_average: 9.8
        lloc_average: 6.6
        cloc_average: 0.2
        blank_average: 1.2
        sloc_min: 4
        sloc_max: 56
        cloc_min: 0
        cloc_max: 1
        ploc_min: 4
        ploc_max: 49
        lloc_min: 2
        lloc_max: 33
        blank_min: 0
        blank_max: 6
      nom:
        functions: 3
        closures: 0
        functions_average: 0.6
        closures_average: 0
        total: 3
        average: 0.6
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 652
        average: 130.4
        min: 4
        max: 564
      mi:
        original: 61.824
        sei: 58.302
        visual_studio: 36.154
      abc:
        assignments: 19
        branches: 21
        conditions: 7
        magnitude: 29.172
        value: 0
        assignments_average: 3.8
        branches_average: 4.2
        conditions_average: 1.4
        assignments_min: 0
        assignments_max: 19
        branches_min: 0
        branches_max: 18
        conditions_min: 0
        conditions_max: 7
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 5
    closure_args: 0
    function_args_average: 1.667
    closure_args_average: 0
    total: 5
    value: 0
    average: 1.667
    function_args_min: 0
    function_args_max: 2
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 5
    value: 0
    average: 1.667
    min: 0
    max: 5
  cyclomatic:
    sum: 10
    value: 1
    average: 3.333
    min: 1
    max: 5
    modified:
      sum: 10
      value: 1
      average: 3.3333333333333335
      min: 1
      max: 5
  halstead:
    unique_operators: 29
    total_operators: 294
    unique_operands: 64
    total_operands: 195
    length: 489
    estimated_program_length: 524.881
    purity_ratio: 1.073
    vocabulary: 93
    volume: 3197.649
    difficulty: 44.18
    level: 0.023
    effort: 141271.118
    time: 7848.395
    bugs: 0.904
  loc:
    sloc: 63
    ploc: 54
    lloc: 33
    cloc: 2
    blank: 8
    sloc_average: 10.5
    ploc_average: 9
    lloc_average: 5.5
    cloc_average: 0.333
    blank_average: 1.333
    sloc_min: 4
    sloc_max: 63
    cloc_min: 0
    cloc_max: 2
    ploc_min: 4
    ploc_max: 54
    lloc_min: 2
    lloc_max: 33
    blank_min: 0
    blank_max: 8
  nom:
    functions: 3
    closures: 0
    functions_average: 0.5
    closures_average: 0
    total: 3
    average: 0.5
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 668
    average: 111.333
    min: 4
    max: 564
  mi:
    original: 59.616
    sei: 29.933
    visual_studio: 34.863
  abc:
    assignments: 19
    branches: 21
    conditions: 7
    magnitude: 29.172
    value: 0
    assignments_average: 3.167
    branches_average: 3.5
    conditions_average: 1.167
    assignments_min: 0
    assignments_max: 19
    branches_min: 0
    branches_max: 18
    conditions_min: 0
    conditions_max: 7
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
