snapshots/DeepSpeech/native_client/kenlm/lm/sizes.hh.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 17
kind: unit
spaces:
  - name: lm
    start_line: 8
    end_line: 16
    kind: namespace
    spaces:
      - name: ngram
        start_line: 8
        end_line: 16
        kind: namespace
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 13
            total_operators: 31
            unique_operands: 7
            total_operands: 14
            length: 45
            estimated_program_length: 67.757
            purity_ratio: 1.506
            vocabulary: 20
            volume: 194.487
            difficulty: 13
            level: 0.077
            effort: 2528.328
            time: 140.463
            bugs: 0.062
          loc:
            sloc: 9
            ploc: 6
            lloc: 3
            cloc: 0
            blank: 3
            sloc_average: 9
            ploc_average: 6
            lloc_average: 3
            cloc_average: 0
            blank_average: 3
            sloc_min: 9
            sloc_max: 9
            cloc_min: 0
            cloc_max: 0
            ploc_min: 6
            ploc_max: 6
            lloc_min: 3
            lloc_max: 3
            blank_min: 3
            blank_max: 3
          nom:
            functions: 0
            closures: 0
            functions_average: 0
            closures_average: 0
            total: 0
            average: 0
            functions_min: 0
            functions_max: 0
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 62
            average: 62
            min: 62
            max: 62
          mi:
            original: 107.769
            sei: 79.879
            visual_studio: 63.023
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
          npm:
            class_npm_sum: 0
            interface_npm_sum: 0
            class_methods: 0
            interface_methods: 0
            class_coa: 0
            interface_coa: 0
            total: 0
            total_methods: 0
            coa: 0
          npa:
            class_npa_sum: 0
            interface_npa_sum: 0
            class_attributes: 0
            interface_attributes: 0
            class_cda: 0
            interface_cda: 0
            total: 0
            total_attributes: 0
            cda: 0
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 2
        value: 1
        average: 2
        min: 1
        max: 1
        modified:
          sum: 2
          value: 1
          average: 2
          min: 1
          max: 1
      halstead:
        unique_operators: 13
        total_operators: 33
        unique_operands: 8
        total_operands: 15
        length: 48
        estimated_program_length: 72.106
        purity_ratio: 1.502
        vocabulary: 21
        volume: 210.831
        difficulty: 12.188
        level: 0.082
        effort: 2569.506
        time: 142.75
        bugs: 0.063
      loc:
        sloc: 9
        ploc: 6
        lloc: 3
        cloc: 0
        blank: 3
        sloc_average: 4.5
        ploc_average: 3
        lloc_average: 1.5
        cloc_average: 0
        blank_average: 1.5
        sloc_min: 9
        sloc_max: 9
        cloc_min: 0
        cloc_max: 0
        ploc_min: 6
        ploc_max: 6
        lloc_min: 3
        lloc_max: 3
        blank_min: 3
        blank_max: 3
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 66
        average: 33
        min: 4
        max: 62
      mi:
        original: 107.119
        sei: 79.044
        visual_studio: 62.643
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 0
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 0
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 3
    value: 1
    average: 3
    min: 1
    max: 1
    modified:
      sum: 3
      value: 1
      average: 3
      min: 1
      max: 1
  halstead:
    unique_operators: 13
    total_operators: 33
    unique_operands: 9
    total_operands: 17
    length: 50
    estimated_program_length: 76.635
    purity_ratio: 1.533
    vocabulary: 22
    volume: 222.972
    difficulty: 12.278
    level: 0.081
    effort: 2737.596
    time: 152.089
    bugs: 0.065
  loc:
    sloc: 17
    ploc: 11
    lloc: 3
    cloc: 2
    blank: 6
    sloc_average: 5.667
    ploc_average: 3.667
    lloc_average: 1
    cloc_average: 0.667
    blank_average: 2
    sloc_min: 9
    sloc_max: 17
    cloc_min: 0
    cloc_max: 2
    ploc_min: 6
    ploc_max: 11
    lloc_min: 3
    lloc_max: 3
    blank_min: 3
    blank_max: 6
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 75
    average: 25
    min: 4
    max: 62
  mi:
    original: 96.295
    sei: 22.299
    visual_studio: 56.313
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
